test_programs/compile_failure/noirc_frontend_tests_errors_if_for_body_type_is_not_unit/src/main.nr

    fn main() {
        for _ in 0..1 {
            1
        }
    }
    